--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@actions/core": "^1.2.6",
     "@actions/github": "^4.0.0",
     "semver": "^7.3.4"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.27.0"
   }
 }
