--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean-modules": "((ls node_modules > /dev/null 2>&1) && rm -r ./node_modules) || true",
     "clean": "npm run clean-dist && npm run clean-modules",
     "compile": "ncc build index.js --license licenses.txt",
-    "build": "npm run clean && npm i && npm run compile"
+    "build": "npm run clean && npm i && npm run compile",
+    "test": "mocha"
   },
   "repository": {
     "type": "github",
