--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           cache: 'npm'
+          node-version: 16
       - name: Install Dependencies
         run: npm i
       - name: Run Tests
